# DICOMViewer

./: .gitignore  CMakeLists.txt  README.md  README_CN.md
src/: mainwindow.cpp  mainwindow.h
